# boids

./: CMakeLists.txt  README.md
src/: Makefile  ant_war_direct  base.cpp  boid.cpp  boid.h  charBoid.cpp  charBoid.h  it_s_work.h  main.cxx  pieBoid.cpp  pieBoid.h  randomrange.h  todo.md
